building testimonial- part 2; include gallery, fix spacing issues, give photo a hover effect

--- a/css/styles.css
+++ b/css/styles.css
@@ -352,13 +352,21 @@
 /* TESTIMONIALS SECTION */
 /************************/
 .section-testimonials {
-    padding: 9.6rem 0;
+    background-color: #fdf2e9;
+    display:grid;
+    grid-template-columns: 55fr 45fr;
+    align-items: center;
+}
+
+.testimonial-container {
+    padding: 9.6rem;
 }
 
 .testimonials {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap:4.8rem;
+    row-gap: 4.8rem;
+    column-gap: 8rem;
 }
 
 .testimonial-img {
@@ -379,5 +387,34 @@
 
 .testimonial-name {
     font-size: 1.6rem;
-    color: #777;
+    color: #6f6f6f;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+    padding: 1.6rem;
+}
+
+.gallery-item {
+    overflow: hidden;
+}
+
+.gallery-item img {
+    display:block;
+    /*removesspacingbetweenimages*/width:100%;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+}
+
+.gallery-item img:hover {
+   transform: scale(1.1);
+   -webkit-transform: scale(1.1);
+   -moz-transform: scale(1.1);
+   -ms-transform: scale(1.1);
+   -o-transform: scale(1.1);
 }
